--- a/docs/v0.5presentation.md
+++ b/docs/v0.5presentation.md
@@ -17,23 +17,11 @@ V0.5 Presentation Outline
 # Delete
 - delete by index
 
-# Find
-- keyword(s)
-- s/STARTTIME
-- e/ENDTIME
-- c/ (completed tasks)
-- c/not (uncompleted tasks)
-- c/COMPLETETIME (completed before complete time)
-- s/STARTTIME e/ENDTIME
-- s/STARTIME c/COMPLETETIME
-- ty/[floating, event, deadline]
-
 # Save File Path Changed
 - Change files, perform a CUD operation and change back to original file
 - Change to file that does not exist
 
-
-### Jordan
+### Andy
 
 # Edit
 - Edits a Todo's title, start time, endtime, and tags.
@@ -47,6 +35,8 @@ V0.5 Presentation Outline
 - Adds a new tag to a todo.
   - Format: `edit INDEX [ta/TAG]`
 
+### Jordan
+
 # Complete/Uncomplete
 - complete without time
 - complete with time
@@ -58,3 +48,14 @@ V0.5 Presentation Outline
 - delete
 - complete/uncomplete
 - multiple levels of undo
+
+# Find
+- keyword(s)
+- s/STARTTIME
+- e/ENDTIME
+- c/ (completed tasks)
+- c/not (uncompleted tasks)
+- c/COMPLETETIME (completed before complete time)
+- s/STARTTIME e/ENDTIME
+- s/STARTIME c/COMPLETETIME
+- ty/[floating, event, deadline]
